# pinguin-classificacio

./: README.md  pyproject.toml
src/: client_flask.py  entrenament_models.py  preprocessament_dades.py  server_flask.py
