[tool.poetry]
name = "pinguin-classificacio"
version = "0.1.0"
description = ""
authors = ["lorenworld <lorenformacio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
